k8s/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: agents
  labels:
    app: agents
spec:
  ports:
    - name: http
      port: 8001
  selector:
    app: agents
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: agents
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: agents
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8009"
    spec:
      containers:
        - name: agents
          image: petecknight/agents:1.0.0
          ports:
            - containerPort: 8009
          readinessProbe:
            httpGet:
              path: /
              port: 8009
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8009
            initialDelaySeconds: 20
            periodSeconds: 5
